<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="209dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:srcCompat="@drawable/b6"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:alpha="0.85"
        android:text="@string/register_movie"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:text="@string/display_movies"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:text="@string/favourites"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:text="@string/edit_movies"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:text="@string/search"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:text="@string/ratings"
        app:backgroundTint="#F0750F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />



</androidx.constraintlayout.widget.ConstraintLayout>