<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="366dp"
                android:layout_height="52dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:alpha="0.80"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="serif"
                android:gravity="center"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/purple_500"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/Name"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/purple_500"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/Year"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/purple_500"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/Director"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/purple_500"
                    android:gravity="center|left"
                    android:paddingLeft="75dp"
                    android:text="@string/Actors"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </ScrollView>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/purple_500"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/Rate"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/purple_500"
                    android:gravity="center|left"
                    android:paddingLeft="75dp"
                    android:text="@string/Review"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>